@@ -48,6 +48,7 @@ ___
 * `bcdui.config.userName` now holds the value from bcdui_sec_user.name not user_login anymore
 * `bcdui.browserCompatibility.isXYZ` for various browser detections updated. Removed `isIE`, `isMsEdge`, `isIE8`. `isChromiumEdge` became `isEdge`
 * Remove msxsl namespace from preset namespaces
+* comment widget uses bcdUpdateBy and bcdUpdateStamp binding items instead of updatedBy and lastUpdate
 ___
 ==== Release 5_6_0
 
